# E-commerce-AI-stylist

./: .gitignore  DESIGN.md  GEMINI.md  PRODUCT.md  README.md  ai_stylist_sequence_diagram.md  developer_guide.html  package.json  pnpm-lock.yaml  project_checklist.md  stage_5_checklist.md  turbo.json
.ai-knowledge/: 00_architecture_rules.md  01_directory_structure.md  02_local_setup.md  03_software_architecture_interfaces.md  10_use_cases.yaml  11_api_contracts.yaml  12_internal_auth_rules.md  20_database_schema.sql  21_db_api_matrix.yaml  22_vector_db_schema.md  30_medusa_workflows.md  40_frontend_guidelines.md  50_ai_model_specs.md  51_llm_config_prompts.md  99_bug_resolution_log.md  missing_knowledge_report.md
.antigravitycli/: 967f07ad-8be5-4ac2-82b8-941a2530fab8.json
.gemini/agents/: knowledge_updater.md
apps/ai-service/: .env.example  main.py  pyproject.toml  requirements.txt
apps/ai-service/scripts/: sync_to_lancedb.py  test_rag.py
apps/ai-service/src/ai/: embedding.py  flux_vton.py  llm_client.py  vton.py
apps/ai-service/src/api/routes/: stylist.py
apps/ai-service/src/database/: schema.py  search.py
apps/api-medusa/: .env.example  .gitignore  medusa-config.ts  package.json  test-consumer.js  test-medusa.js
apps/web/: .env.example  package.json  tailwind.config.ts
artifact/: flux_detailed_implementation_plan.md  flux_integration_plan.md
docker/: docker-compose.yml
plan_checklist/: project_checklist.md  project_checklist_2_tech_debt_and_backlog.md  stage_5.1_plan.md  stage_5.2_plan.md  stage_5.2_plan_phase_1.md  stage_5.2_plan_phase_2.md  stage_5.2_plan_phase_3.md  stage_5.3_plan.md  stage_5.3_plan_phase_1.md  stage_5.3_plan_phase_2.md  stage_5.3_plan_phase_3.md  stage_5.4_plan.md  stage_5.4_plan_phase_1.md  stage_5.4_plan_phase_2.md  stage_5.4_plan_phase_3.md  stage_5_checklist.md
report_latex/: huong_dan_thuat_ngu_bao_cao_tieu_luan.md  khung_bao_cao_do_an_co_so_ai_fashion.html  main.tex
report_latex/contents/: abbreviations.tex  abstract.tex  acknowledgement.tex  appendix.tex  phenikaa_template_cover.tex  pledge.tex  references.tex
report_latex/contents/diagrams/: ai_erd.tex  architecture_overview.tex  local_deployment.tex  rag_flow.tex  stylist_sequence.tex  use_case.tex  (+1 more)
slide/: README.md  export-pdf.js  index.html
slide/css/: styles.css
slide/js/: slides.js
(+70 files in other folders)
