[project]
name = "ai-service"
version = "0.1.0"
description = "AI Fashion Service using FastAPI & LanceDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "lancedb>=0.5.0",
    "pika>=1.3.2",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "sentence-transformers>=5.4.1",
    "pillow>=12.2.0",
    "openai>=2.34.0",
    "google-genai>=1.75.0",
]
