[project]
name = "ai-service"
version = "0.1.0"
description = "AI Fashion Service using FastAPI & LanceDB"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "lancedb>=0.5.0",
    "pika>=1.3.2",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "sentence-transformers>=5.4.1",
    "pillow>=12.2.0",
    "openai>=2.34.0",
    "google-genai>=1.75.0",
    "diffusers>=0.37.1",
    "accelerate>=1.13.0",
    "transformers>=5.7.0",
    "huggingface-hub>=1.13.0",
    "requests>=2.33.1",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.25.2",
    "fvcore>=0.1.5.post20221221",
    "cloudpickle>=3.1.2",
    "omegaconf>=2.3.0",
    "torch>=2.7.0.dev",
    "torchvision>=0.21.0.dev",
    "torchaudio>=2.5.0.dev",
    "pycocotools>=2.0.11",
    "matplotlib>=3.10.9",
    "av>=17.0.1",
    "peft>=0.19.1",
    "replicate>=2.0.0b4",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
